# thesis_EADL

./: .gitignore  README.md  exp3handoff.md  post_runner.md  pyproject.toml  readme_baseline.md  requirements.txt
artifacts/: audit_exp2_policy_v2_16pt__A.json  audit_exp2_policy_v2_16pt__B.json
configs/: example.toml  exp1_minimal.toml  exp2_minimal.toml
configs/locked/: exp1_eval_v1_baseline_a.toml  exp1_eval_v1_proposed.toml  exp1_eval_v2_baseline_a.toml  exp1_eval_v2_overhead_baseline_a.toml  exp1_eval_v2_overhead_proposed.toml  exp1_eval_v2_proposed.toml  exp2_eval_v1_baseline_a.toml  exp2_eval_v1_baseline_b.toml  exp2_eval_v1_proposed.toml  (+2 more)
docs/: ADVISOR_PATCH_RESPONSES.md  README_setup.md  dependencies.md  exp3_go_no_go_prereg.md  exp3_shock_v1_interpreted_results.md  experiment1_full_summary.md  experiment2_runbook.md  experiment3_full_summary.md  experiment_2_policy_summary__8pt.md  experiment_2_policy_summary__v2_policy.md  experiment_2_summary.md  final_claims.md  guardrails.md  improvement_ex1.md
scripts/: analyze_exp3_results.py  audit_exp1_completeness.py  audit_exp2_completeness.py  audit_exp2_policy_completeness.py  exp3_identity_reduction_gate_report.py  generate_exp1_paper_summary.py  generate_exp2_paper_summary.py  generate_exp2_policy_summary.py  run_exp2_policy_v1.ps1  run_exp2_policy_v2_16pt.ps1  run_exp3_go_nogo_gate.ps1  run_exp3_shock_v1_from_exp2_policy_v2_16pt.ps1
tests/: test_exp3_generation_inherits_exp2_policy_points.py  test_exp3_shock_identity.py  test_matched_seed_events.py  test_semantics_effect.py  test_summarize_sweep.py
(+1592 files in other folders)
